# cpp-hello-world-ci

./: CMakeLists.txt  README.md
.github/workflows/: ci.yml
src/: main.cpp
